# helix-hl-diff

./: .gitignore  README.md  helix-config.toml  pyproject.toml
helix_hl_diff/: __main__.py  archive.py  helix.py  img_compare.py  img_ops.py  render.py
helix_hl_diff/resources/: helix-config.toml
helix_hl_diff/resources/helix-runtime/themes/: catppuccin.toml
resources/: LICENSE
