[project]
name = "helix-hl-diff"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["pillow>=11.1.0", "stransi>=0.3.0"]

[project.scripts]
helix-hl-diff = "helix_hl_diff.__main__:main"

[tool.ruff]
select = ["ALL"]
ignore = ["D", "S", "T", "ERA"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
